Fixed alignment of brand header

--- a/css/theme.css
+++ b/css/theme.css
@@ -221,6 +221,10 @@ a:focus {
     vertical-align: middle;
 }
 
+.brand-heading {
+    text-align: center;
+}
+
 .intro .intro-body .brand-heading {
     font-size: 40px;
     font-size: 3.122vw;
